...
        DropdownGroupDefinition(label = "北海道", optionValues = listOf("HOKKAIDO")),
        DropdownGroupDefinition(
            label = "東北",
            optionValues = listOf("AOMORI", "IWATE", "MIYAGI", "AKITA", "YAMAGATA", "FUKUSHIMA"),
        ),
        DropdownGroupDefinition(
            label = "北関東",
            optionValues = listOf("IBARAKI", "TOCHIGI", "GUNMA", "YAMANASHI", "NAGANO"),
        ),
        DropdownGroupDefinition(
            label = "南関東",
            optionValues = listOf("SAITAMA", "CHIBA", "TOKYO", "KANAGAWA"),
        ),
...
